# Performace-Agent

./: .gitignore  .gitlab-ci.yml  Jenkinsfile  Performance_Testing_AI_Agent_Blueprint.md  README.md  azure-pipelines.yml  pyproject.toml  start_agent_ui.bat
.codex/environments/: environment.toml
.github/workflows/: release-readiness-gate.yml
docs/: ci_cd_release_gate.md  governance_security.md
examples/: ci_release_gate_config.json  perf_agent_config.json  phase3_observability_config.json  sample_database_metrics.json  sample_monitoring_metrics.json  sample_pipeline_report.md  sample_postgres_diagnostics.json  sample_sqlserver_query_store.json  users.example.json
scripts/: post_gitlab_performance_comment.py
src/perf_agent/: __init__.py  adapters.py  ai.py  analysis.py  cli.py  config.py  governance.py  models.py  reporting.py  serialization.py  web.py  workflow.py
src/perf_agent/web_static/: app.js  index.html  styles.css
tests/: test_agent_workflow.py  test_ai_rca.py  test_ci_templates.py  test_cli.py  test_governance.py  test_k6_adapter.py  test_phase3_observability.py
