[project]
name = "performance-testing-ai-agent"
version = "0.1.0"
description = "Performance Testing AI Agent MVP for pre-UAT and pre-release performance risk detection."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
perf-agent = "perf_agent.cli:main"
perf-agent-ui = "perf_agent.web:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
